# Reddw

./: .env  .eslintrc.json  .gitignore  Cargo.toml  README.md  automation_socket.txt  global.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  x.ps1
.github/workflows/: rust.yml  tauri.yml
entity/: Cargo.toml
entity/bindings/: Config.ts  Source.ts
entity/src/: config.rs  mod.rs  prelude.rs  source.rs
macros/: Cargo.toml
macros/src/: lib.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220910_200458_add_configs.rs
migrations/2022-09-09-102542_create_sources/: down.sql  up.sql
migrations/2022-09-09-155101_Add config fields/: down.sql  up.sql
plugins/plugin_tester/: Cargo.toml
plugins/plugin_tester/src/: main.rs
plugins/reddw-source-plugin/: Cargo.toml
plugins/reddw-source-plugin/src/: lib.rs
plugins/reddw-wallhaven/: Cargo.toml
plugins/reddw-wallhaven/src/: lib.rs  main.rs  response_data.rs
plugins/reddw-wallhaven/ui/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
plugins/reddw-wallhaven/ui/src/: App.tsx  Component.tsx  index.tsx  webComponent.ts
reddw_ipc/: Cargo.toml
reddw_ipc/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  wallpaper.rs
src/: App.tsx  Config.tsx  History.tsx  Main.tsx  Sources.tsx  index.css  index.tsx  utils.ts
src-tauri/: Cargo.toml  sqlx-data.json  tauri.conf.json
src-tauri/.sqlx/: query-08c5007db78737d7c561b951866555e2283f38691df161e236b4bd5d136ca219.json  query-3e6ea7da46c2f31348d28634aafe935da1681bf7bc930a400e96d4ada1f13f1f.json  query-45710df64a2c76358333f681944e8610155bbcc293fddaf346bce78b266a193b.json  query-71c625028c654a5c498ae2e237136146c7168b92d31ce9a9ebfb685a1d0e0a46.json  query-7bf7f309c1ad2a08a01abf8653ecebcdf5c851e426c05b20d526d322993a7bcc.json  query-8d7ef6923080b890f35f6829d5de4a85c51618bbcc5ee50f5b80a67e95755efe.json  query-a9d313a00602574deec2756749247a0fdf5b94fcde0e36869b762a6f7755544a.json  query-c04b0690f3f2fab23a95034f4330098bdf3b333474156c536da579e28eb31764.json  query-c0508851497539778afc189ed471d249b689fdcde8e902d5314ec3f223827f35.json  query-cb047baa1a8a0415fa5a492421eee372fd6683769871f26a69b237307a75c5b8.json  query-ecc6bf37bb8423a0be0495b81c1900a6c4a69391346f0e38539eb77196eb830b.json
src-tauri/bindings/: Config.ts  NewSource.ts  Source.ts
src-tauri/migrations/: 20230127183402_init.sql  20240106091655_Make_name_optional.sql
src-tauri/src/: app_config.rs  app_handle_ext.rs  automation_socket.rs  db.rs  log.rs  main.rs  models.rs  queue.rs  schema.rs  setup.rs  source_host.rs  tray.rs  wallpaper_changer.rs  watcher.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/sources/: mod.rs  reddit.rs
src/form/: Form.tsx
src/utils/: Form.tsx
ui/: cargo.toml  glue.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: App.svelte  App.tsx  Config.svelte  Config.tsx  Log.tsx  Main.svelte  Queue.svelte  app.css  global.ts  glue.rs  inappWallpaper.ts  index.css  index.tsx  main.rs  main.ts  misc.ts  oldJs.ts  overrides.ts  vite-env.d.ts
ui/src/components/: Range.tsx
ui/src/config/: Config.tsx  DurationEditor.tsx  LogBehaviour.tsx  Sources.tsx
ui/src/context/: config.tsx  sources.tsx
ui/src/prompt/: Component.svelte  index.ts
ui/src/types/: global.d.ts  source.ts
