[workspace]
package.version = "0.2.0"
package.edition = "2021"
package.license = "GPL3"
package.authors = ["Liran Piade"]
package.repository = "https://github.com/lirannl/reddw"

members = [ "src-tauri", "plugins/reddw-source-plugin", "plugins/reddw-wallhaven" ]
default-members = [ "src-tauri" ]
resolver = "2"
