[workspace]
package.version = "0.2.0"
package.edition = "2021"
package.license = "GPL-3.0-only"
package.authors = ["Liran Piade"]
package.repository = "https://github.com/lirannl/reddw"
package.homepage = "https://github.com/lirannl/reddw"

members = [ "src-tauri", "plugins/reddw-source-plugin", "plugins/reddw-wallhaven" , "plugins/plugin_tester", "reddw_ipc"]
default-members = [ "src-tauri" ]
resolver = "2"
