
[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/mod.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
ts-rs = {version = "^6.1", features = ["serde-compat"] }

[dependencies.sea-orm]
version = "^0.9.2" # sea-orm version