[package]
name = "reddw_ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
whoami = "1.4.0"
hex = "0.4.3"
tokio = { version ="1.22.0", features = ["rt", "macros"] }
rmp-serde = "1.1"
anyhow = "1.0"