[package]
name = "reddw"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "A wallpaper changer"
default-run = "reddw"
rust-version.workspace = true

[build-dependencies]
tauri-build = { version = "1.2.0", features = [] }

[dependencies]
reddw-source-plugin = { path = "../plugins/reddw-source-plugin", default-features = false, features = ["host"] }
reddw_ipc = { path = "../reddw_ipc" }
macros = { path = "../macros" }
serde_json = "1.0"
sqlx = { version = "^0.7", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
tauri = { version = "1.2.0", features = ["system-tray"] }
reqwest = { version = "0.11.13", features = ["serde_json"] }
wallpaper = { version = "3.2.0", features = ["reqwest"] }
notify = { version = "6.0", features = ["serde"] }
tokio = { version = "1.22.0", features = [
    "time",
    "rt",
    "macros",
    "process",
    "sync",
] }
serde = { version = "1.0", features = ["derive"] }
window-vibrancy = "0.3.1"
mime_guess = "2.0.4"
anyhow = "1.0"
ts-rs = "6.2"
rand = "0.8.5"
open = "3.2.0"
chrono = { version = "0.4", features = ["serde"] }
data-encoding = "2.3.3"
rfd = {version = "0.10", default-features = false, features = ["xdg-portal"] }
clap = { version = "4.2.1", features = ["derive"] }
whoami = "1.4.0"
hex = "0.4.3"
lazy_static = "1.4"
base64 = "0.21.0"
futures = "0.3"
winproc = "0.6"
nix = { version = "0.27", features = ["signal"] }
sha256 = "1.5"
serde_cbor = "0.11"
debounce = "0.2.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
