[package]
name = "plugin_tester"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "time"] }
reddw-source-plugin = { path = "../reddw-source-plugin" }
io-plugin = { version = "0.4.3" }