[package]
name = "reddw-source-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sqlx = ["dep:sqlx"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ts-rs = "6.2"
chrono = { version = "0.4", features = ["serde"] }
rmp-serde = "1.1"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "chrono", "offline"], optional = true }