[package]
name = "reddw-source-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true

[features]
default = ["plugin"]
sqlx = ["dep:sqlx"]
host = []
plugin = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ts-rs = "6.2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "chrono",
    "offline",
], optional = true }
io-plugin = { version = "0.5.3" }