[package]
name = "reddw-source-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish = true

[features]
default = ["plugin"]
host = ["dep:sqlx"]
plugin = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
ts-rs = "6.2"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "chrono",
], optional = true }
io-plugin = { version = "0.6.0" }