[package]
name = "reddw-wallhaven"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reddw-source-plugin = { version = "0.2.0", path = "../reddw-source-plugin" }

[lib]
crate-type = ["dylib"]