[package]
name = "reddw-wallhaven"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
lazy_static = "1.4"
reddw-source-plugin = { version = "0.2.0", path = "../reddw-source-plugin" }
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
anyhow = "1.0.66"
tokio = { version = "1.34.0", features = ["rt", "macros"] }